# ml-car-price-prediction

./: .gitignore  README.md  pyproject.toml  run-pipeline.py  run-pycaret-comparison.py  run_pipeline.py  run_pycaret_comparison.py
data/: X_test.csv  X_train.csv  car-price-cleaned.csv  car-price-featured.csv  y_train.csv
models/: gradient_boosting.pkl  linear_regression.pkl  random_forest.pkl
notebooks/: 01-data-gathering.ipynb  02-data-cleaning.ipynb  03-eda.ipynb  04-feature-engineering.ipynb  05-preprocessing.ipynb  06-train-models.ipynb  07-evaluation.ipynb  08-explainability.ipynb  08-interpretation.ipynb  09-explainability.ipynb  10-presentation-tables.ipynb
pycaret/: pycaret-preprocessed-output.txt  pycaret-raw-output.txt  run-pycaret-preprocessed.py  run-pycaret-raw.py
